--- a/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
@@ -24,6 +24,7 @@
                     'a7b1a7c5-b25b-11e9-8a4e-a4d18cec433a',
                 ],
                 renderContext: 'workflow',
+                allowInstanceCreation: true,
                 value: procedureValue,
                 disabled: locked
             }
