--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -5,7 +5,7 @@
     </p>
 
     <!-- ko foreach: [...physicalThingDigitalReferencePreferredManifestResourceData(), ...physicalThingDigitalReferenceAlternateManifestResourceData()] -->
-        <div style="display: flex; padding-left: 5px;">
+        <div style="display: flex; align-items: center; padding-left: 5px;">
             <input 
                 style="
                     cursor: pointer;
@@ -18,12 +18,16 @@
                 }"
             />
             <label 
-                style="cursor: pointer;"
+                style="cursor: pointer; margin-right: 5px;"
                 data-bind="
                     text: $data.displayname,
                     click: function() { $parent.selectedPhysicalThingImageServiceName($data.displayname) }
                 "
             ></label>
+            <span data-bind="value: console.log($data)"></span>
+            <span class="iiif-gallery-canvas-thumbnail">
+                <img data-bind="attr: { src: $data.thumbnail }">
+            </span>
         </div>
     <!-- /ko -->
 </div>
