first attempt at client side/chunked uploads to s3

--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -34,4 +34,5 @@ define('register-three', ['three'], function (THREE) {
     window.THREE = THREE;
     });
 </script>
+<script src="https://releases.transloadit.com/uppy/v2.12.1/uppy.min.js"></script>
 {% endblock project_modules %}
