--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1,4 +1,7 @@
 @import url(report_templates.css);
+@import '../packages/@uppy/core/dist/style.css';
+@import '../packages/@uppy/progress-bar/dist/style.css';
+
 .nav>li>a:focus {
     text-decoration: none;
     background-color: #000;
