--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -26,12 +26,13 @@
 {% block urls %}
     physical_thing_search_results: "{% url 'physical-thing-search-results' %}",
     physical_things_set: "{% url 'physical_things_set' %}",
+    reports: "{% url 'reportview' %}",
 {% endblock urls %}
 
 {% block project_modules %}
 <script>
-define('register-three', ['three'], function (THREE) {
-    window.THREE = THREE;
+    define('register-three', ['three'], function (THREE) {
+        window.THREE = THREE;
     });
 </script>
 {% endblock project_modules %}
