--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-final-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-final-step.htm
@@ -2,33 +2,6 @@
 <!-- ko if: loading() === false -->
 <div class="final-step">
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Created or Modified Resource Instance' %}</h5>
-        <div class="afs-final-step-block">
-            <div style="display: flex; flex-direction: column;">
-                <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
-                    <div class="summary-value" 
-                        data-bind = "text: displayName + ' ({% trans 'Sampling Activity Resource Instance' %})'">
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Related Project/Object' %}</h5>
-        <div class="afs-final-step-block">
-            <div style="display: flex; flex-direction: column;">
-                <div style="display: inline-flex;">
-                    <div class="summary-label" data-bind="text: reportVals.projectName.name + ':'"></div>
-                    <div class="summary-value" data-bind="text: reportVals.projectName.value"></div>
-                </div>
-                <div style="display: inline-flex;">
-                    <div class="summary-label" data-bind="text: reportVals.sampledObjectName.name + ':'"></div>
-                    <div class="summary-value" data-bind="text: reportVals.sampledObjectName.value"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="afs-final-step-section">
         <h5 class="summary-value" style="margin-bottom: 10px;">{% trans 'Sampling Activity' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
@@ -37,12 +10,12 @@
                     <div class="summary-value" data-bind="text: reportVals.samplingActivityName.value"></div>
                 </div>
                 <div style="display: inline-flex;">
-                    <div class="summary-label" data-bind="text: reportVals.samplers.name + ':'"></div>
-                    <div class="summary-value" data-bind="text: reportVals.samplers.value"></div>
-                </div>
-                <div style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: reportVals.samplingDate.name + ':'"></div>
                     <div class="summary-value" data-bind="text: reportVals.samplingDate.value"></div>
+                </div>
+                <div style="display: inline-flex;">
+                    <div class="summary-label" data-bind="text: reportVals.samplers.name + ':'"></div>
+                    <div class="summary-value" data-bind="text: reportVals.samplers.value"></div>
                 </div>
                 <div class="pad-top" style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: reportVals.technique.name + ':'"></div>
@@ -53,14 +26,29 @@
                 <div class="pad-top" style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: reportVals.motivation.name + ':'"></div>
                 </div>
-                <div style="display: inline-flex;"></div>
+                <div style="display: inline-flex;">
                     <div class="summary-value" data-bind="html: reportVals.motivation.value"></div>
+                </div>
+                <div style="display: inline-flex;">
+                    <div class="summary-label" data-bind="text: reportVals.projectName.name + ':'"></div>
+                    <div class="summary-value" data-bind="text: reportVals.projectName.value"></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Sampling Locations' %}</h5>
+        <h5 class="summary-value">{% trans 'Object Sampled' %}</h5>
+        <div class="afs-final-step-block">
+            <div style="display: flex; flex-direction: column;">
+                <div style="display: inline-flex;">
+                    <div class="summary-label" data-bind="text: reportVals.sampledObjectName.name + ':'"></div>
+                    <div class="summary-value" data-bind="text: reportVals.sampledObjectName.value"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="afs-final-step-section">
+        <h5 class="summary-value">{% trans 'Samples Taken' %}</h5>
         <!-- ko foreach: sampleAnnotations -->
         <div style="display: inline-flex; flex-direction: column; padding-bottom: 25px;">
             <div style="border: solid 1px #ddd">
