Allow instrument rr creation upload-dataset, #947

--- a/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
@@ -9,6 +9,7 @@
                     'b6c819b8-99f6-11ea-a9b7-3af9d3b32b71',
                 ],
                 renderContext: 'workflow', 
+                allowInstanceCreation: true,
                 value: instrumentValue,
                 disabled: locked
             }
