Remove parthood tab & move content to Larger Entities tab

--- a/afs/templates/views/components/reports/group.htm
+++ b/afs/templates/views/components/reports/group.htm
@@ -37,7 +37,7 @@
                     }
                 }"></div>
             </div>
-            <!-- Description & Professional Events Tab -->
+            <!-- Description Tab -->
             <div class="afs-report-page" data-bind="if: activeSection() === 'description'">
                 <div data-bind="component: {
                     name: 'views/components/reports/scenes/description',
@@ -86,8 +86,8 @@
                     }
                 }"></div>
             </div>
-            <!-- Parthood Tab --> 
-            <div class="afs-report-page" data-bind="if: activeSection() === 'parthood'">
+            <!-- Larger Entities Tab --> 
+            <div class="afs-report-page" data-bind="if: activeSection() === 'entities'">
                 <div data-bind="component: {
                     name: 'views/components/reports/scenes/default',
                     params: {
