Target parent divs rather than paragraph elements to account for rich-text coming in

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -178,7 +178,7 @@
 }
 
 
-.wf-multi-tile-card-info-details p {
+.wf-multi-tile-card-info-details {
     max-height: 100px;
     max-width: 150px;
     white-space: nowrap;
@@ -230,7 +230,7 @@
     line-height: 1.4;
 }
 
-.summary-report-description p {
+.summary-report-description {
     max-height: 100px;
     max-width: 800px;
     white-space: nowrap;
@@ -441,7 +441,7 @@
     color: #2b547c;
 }
 
-.final-step .summary-value p {
+.final-step .summary-value {
     max-height: 100px;
     max-width: 800px;
     white-space: nowrap;
