Update image service label margin, #843; also move styles to css

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -650,6 +650,16 @@
     margin-top: -8px;
 }
 
+.afs-image-service-instructions input,
+.afs-image-service-instructions label {
+    margin: 0px 5px 0px 0px;
+    cursor: pointer;
+}
+
+.afs-image-service-instructions .iiif-gallery-canvas-thumbnail {
+    margin-left: 10px;
+}
+
 .afs-workflow-required-tag {
     background: #f2f2f2;
     border: 1px solid #ddd;
