--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -7,10 +7,6 @@
     <!-- ko foreach: [...physicalThingDigitalReferencePreferredManifestResourceData(), ...physicalThingDigitalReferenceAlternateManifestResourceData()] -->
         <div style="display: flex; align-items: center; padding-left: 5px;">
             <input 
-                style="
-                    cursor: pointer;
-                    margin-right: 5px;
-                "
                 type="radio" 
                 data-bind="{
                     value: $data.displayname,
@@ -18,13 +14,12 @@
                 }"
             />
             <label 
-                style="cursor: pointer;"
                 data-bind="
                     text: $data.displayname,
                     click: function() { $parent.selectedPhysicalThingImageServiceName($data.displayname) }
                 "
             ></label>
-            <span style="margin: 5px;" class="iiif-gallery-canvas-thumbnail">
+            <span class="iiif-gallery-canvas-thumbnail">
                 <img data-bind="attr: { src: $data.thumbnail }">
             </span>
         </div>
