Move styles to css, #843

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-image-step.htm
@@ -6,9 +6,7 @@
     </p>
 
     <!-- ko foreach: [...physicalThingDigitalReferencePreferredManifestResourceData(), ...physicalThingDigitalReferenceAlternateManifestResourceData()] -->
-        <div
-            style="display: flex; align-items: center;"
-        >
+        <div class="afs-image-service-list-item">
             <input 
                 type="radio" 
                 data-bind="{
