--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -650,14 +650,20 @@
     margin-top: -8px;
 }
 
-.afs-image-service-instructions input,
-.afs-image-service-instructions label {
+.afs-image-service-list-item input,
+.afs-image-service-list-item label {
     margin: 0px 5px 0px 0px;
     cursor: pointer;
 }
 
-.afs-image-service-instructions .iiif-gallery-canvas-thumbnail {
+.afs-image-service-list-item .iiif-gallery-canvas-thumbnail {
     margin-left: 10px;
+}
+
+.afs-image-service-list-item {
+    display: flex;
+    align-items: center;
+    padding-left: 5px;
 }
 
 .afs-workflow-required-tag {
