--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-image-step.htm
@@ -5,7 +5,7 @@
     </p>
 
     <!-- ko foreach: [...physicalThingDigitalReferencePreferredManifestResourceData(), ...physicalThingDigitalReferenceAlternateManifestResourceData()] -->
-        <div style="display: flex; align-items: center; padding-left: 5px;">
+        <div class="afs-image-service-list-item">
             <input 
                 type="radio" 
                 data-bind="{
