Allow user to excluce description types, #932

--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -43,7 +43,7 @@
                     params: {
                         data: resource,
                         cards: descriptionCards,
-                        requestedTypes: physicalThingGeneralDescriptionTypes
+                        excludedTypes: physicalThingExcludedDescriptionTypes
                     }
                 }"></div>
             </div>            
