Fix link to child resource and add styling so table renders properly #961

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -865,3 +865,10 @@
     position: absolute;
     z-index: 100000001;
 }
+
+.afs-report-page .td-display-description {
+    max-width: 30vw;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
