Use better icon for link and adjust styling selectors so as to not include html tags

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -866,8 +866,8 @@
     z-index: 100000001;
 }
 
-.afs-report-page .td-display-description {
-    max-width: 30vw;
+.afs-report-page .display-description {
+    max-width: 40vw;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
