--- a/afs/templates/views/components/workflows/create-project-workflow/project-name-step.htm
+++ b/afs/templates/views/components/workflows/create-project-workflow/project-name-step.htm
@@ -14,9 +14,9 @@
     <div style="padding: 25px 60px 0px;">
         <div class="widget-input-label">Project Activity Type</div>
         <div style="margin-top: -20px;" data-bind="component: {
-            name: 'concept-multiselect-widget',
+            name: 'concept-radio-widget',
             params: {
-                node: {config: {rdmCollection: '3a8e8388-0bb9-42f2-bc77-fc5a1c640589'}},
+                node: {config: {rdmCollection: projectEventTypeRdmCollection }},
                 renderContext: 'workflow', 
                 value: typeValue,
             }
